<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent" >



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="30dp"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_add_pigeon_image_1_id"
        android:layout_width="@dimen/_80sdp"
        android:src="@drawable/eye_png"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_gravity="center"
        android:layout_height="@dimen/_80sdp">

    </de.hdodenhof.circleimageview.CircleImageView>
    <ImageView

        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/camera_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>
       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">

           <de.hdodenhof.circleimageview.CircleImageView
               android:id="@+id/iv_add_pigeon_image_2_id"
               android:layout_width="@dimen/_80sdp"
               android:layout_marginLeft="@dimen/_10sdp"
               android:src="@drawable/body_png"
               android:layout_gravity="center"
               android:layout_height="@dimen/_80sdp">

           </de.hdodenhof.circleimageview.CircleImageView>

           <ImageView
               android:layout_width="20dp"
               android:layout_height="20dp"
               android:layout_marginLeft="90dp"
               android:layout_marginTop="64dp"
               android:background="@drawable/camera_image"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />
       </RelativeLayout>


    </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">




            <!-- <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type : "
                android:layout_gravity="center_vertical"
                ></TextView>
            <RadioGroup
                android:id="@+id/rb_type_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/rb_giribaz_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Giribaz"
                    android:buttonTint="@color/colorTheme"/>


                <RadioButton
                    android:id="@+id/rb_racer_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/radioGroup1"
                    android:layout_below="@+id/radioGroup1"
                    android:text="Racer"
                    android:buttonTint="#070707"/>


            </RadioGroup>-->

            <io.ghyeok.stickyswitch.widget.StickySwitch
                android:id="@+id/sticky_Switch_type"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerInParent="true"
                android:padding="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                app:ss_animationDuration="400"
                app:ss_animationType="line"
                app:ss_iconPadding="10dp"
                app:ss_iconSize="15dp"
                app:ss_leftIcon="@drawable/giribaz"
                app:ss_leftText="@string/Racer"
                app:ss_rightIcon="@drawable/racer"
                app:ss_rightText="@string/Giribaz"
                app:ss_selectedTextSize="10sp"
                app:ss_sliderBackgroundColor="#ffffff"
                app:ss_switchColor="#9EABC2"
                app:ss_textColor="@color/colorPrimaryDark"
                app:ss_textSize="8sp"
                app:ss_textVisibility="visible" />

        </LinearLayout>

        <!--<LinearLayout
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

&lt;!&ndash;            <TextView&ndash;&gt;
&lt;!&ndash;                android:layout_width="wrap_content"&ndash;&gt;
&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;
&lt;!&ndash;                android:text="Name : "&ndash;&gt;
&lt;!&ndash;                ></TextView>&ndash;&gt;


        </LinearLayout>-->
        <EditText
            android:id="@+id/et_add_pigeon_name_id"
            android:hint="@string/pigeon_name"
            android:textAlignment="center"
            android:padding="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@drawable/shape_et_bg"
            android:layout_width="match_parent"
            android:layout_height="48dp">

        </EditText>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/et_add_pigeon_ring_number_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@drawable/shape_et_bg"
                android:hint="@string/ring_number"
                android:padding="@dimen/_8sdp"
                android:textAlignment="center">

            </EditText>

            <Button
                android:visibility="gone"
                android:id="@+id/auto_random_number_id"
                android:layout_width="@dimen/_42sdp"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/colorPrimary"
                android:text="@string/auto"
                android:textAllCaps="false" />
        </RelativeLayout>

        <LinearLayout
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Ring Number : "-->
<!--                ></TextView>-->


         <!--   <AutoCompleteTextView
                android:id="@+id/et_add_pigeon_ring_number_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/colorWhite"
                android:ems="10" />-->


        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <io.ghyeok.stickyswitch.widget.StickySwitch
                android:id="@+id/sticky_Switch_gender"
                android:layout_width="wrap_content"
                android:padding="@dimen/_5sdp"
                android:layout_height="@dimen/_40sdp"
                app:ss_animationDuration="400"
                app:ss_animationType="line"
                app:ss_iconPadding="10dp"
                app:ss_iconSize="15dp"
                app:ss_leftIcon="@drawable/ic_male"
                app:ss_leftText="@string/male"
                app:ss_rightIcon="@drawable/ic_female"
                android:layout_gravity="center_horizontal"
                app:ss_rightText="@string/female"
                app:ss_selectedTextSize="10sp"
                app:ss_sliderBackgroundColor="#ffffff"
                app:ss_switchColor="#9EABC2"
                app:ss_textColor="@color/colorPrimaryDark"
                app:ss_textSize="8sp"
                app:ss_textVisibility="visible" />
           <!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Gender : "></TextView>
            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/rb_male_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:buttonTint="@color/blue"/>


                <RadioButton
                    android:id="@+id/rb_female_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/radioGroup1"
                    android:layout_below="@+id/radioGroup1"
                    android:text="Female"
                    android:buttonTint="#ffb6c1"/>

            </RadioGroup>
-->
        </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">


           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/recent_results">

           </TextView>


           <EditText
               android:maxLength="4"
               android:id="@+id/et_add_pigeon_recent_result_id"
               android:hint="0000"
               android:backgroundTint="@color/colorWhite"
               android:layout_width="wrap_content"
               android:layout_height="50dp"
               android:inputType="number"
               android:importantForAutofill="no" />

   <Spinner
    android:id="@+id/spinner"
    android:layout_gravity="center_vertical"
    android:layout_width="wrap_content"
    android:layout_height="48dp" >

   </Spinner>

       </LinearLayout>


        <EditText
            android:id="@+id/et_add_pigeon_details_id"
            android:hint="@string/pigeon_racing_flying_details"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:textAlignment="center"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/shape_et_bg"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:maxLength="74"></EditText>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breded_by"></TextView>



            <com.github.angads25.toggle.LabeledSwitch
                android:id="@+id/swich_breaded_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="14sp"
                app:on="true"
                app:textOn="@string/me"
                app:textOff="@string/others"
                app:colorOn="@color/colorPrimaryDark"
                app:colorBorder="@color/colorPrimaryAdmin"/>

        </LinearLayout>









       <!-- <LinearLayout
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Father Ring : "
                ></TextView>

        </LinearLayout>-->
        <EditText
            android:id="@+id/et_add_pigeon_father_ring_number_id"
            android:hint="@string/father_ring_number"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:textAlignment="center"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/shape_et_bg"
            android:layout_width="match_parent"
            android:layout_height="48dp">

        </EditText>


        <EditText
            android:id="@+id/et_add_pigeon_mother_ring_number_id"
            android:hint="@string/mother_ring_number"
            android:textAlignment="center"
            android:padding="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@drawable/shape_et_bg"
            android:layout_width="match_parent"
            android:layout_height="48dp">
        </EditText>



        <LinearLayout
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_gravity="center_vertical">

            </TextView>

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_favorite_id"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/favorite"
                    android:buttonTint="@color/colorTheme"/>


                <RadioButton
                    android:id="@+id/rb_normal_id"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_alignLeft="@+id/radioGroup1"
                    android:layout_below="@+id/radioGroup1"
                    android:text="@string/normal"
                    android:buttonTint="#070707"/>


            </RadioGroup>


        </LinearLayout>


        <Button
            android:id="@+id/btn_save_pigeon_added_data_id"
            android:layout_width="wrap_content"
            android:paddingRight="60dp"
            android:paddingLeft="60dp"
            android:text="@string/save"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:background="@drawable/shape_btn_theme_bg"
            android:layout_height="48dp" />

    </LinearLayout>

</ScrollView>

</layout>