<?xml version="1.0" encoding="utf-8"?>
<layout
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <LinearLayout
                android:layout_gravity="end"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp"
                    android:background="@drawable/shape_btn_theme_bg"
                    android:id="@+id/tv_payDegree_id"
                    android:drawableRight="@drawable/menu_share"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:text="@string/pay_degree"
                    android:textColor="@color/colorWhite"
                    android:layout_height="wrap_content"></TextView>

                 <!--
                <ImageView
                    android:id="@+id/iv_pay_degree_show_id"
                    android:src="@drawable/menu_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                -->


                <Button
                    android:visibility="gone"
                    android:id="@+id/btn_edit_pigeon_id"
                    android:layout_width="108dp"
                    android:layout_height="35dp"
                    android:background="@drawable/shape_btn_bg_design"
                    android:text="@string/edit"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"></Button>


            </LinearLayout>




            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_pigeon_show_and_update_image_id"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_pigeon">

            </de.hdodenhof.circleimageview.CircleImageView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_pigeon_name_show_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Name "></TextView>

                <EditText
                    android:visibility="gone"
                    android:id="@+id/et_edit_pigeon_name_id"
                    android:backgroundTint="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:hint="Name Edit"
                    android:textSize="@dimen/_11sdp"
                    android:layout_height="wrap_content"
                    >

                </EditText>


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ring_number"></TextView>

                <TextView
                    android:id="@+id/tv_pigeon_ring_number_show_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="Ring Number"></TextView>



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:text="@string/father_ring_number"></TextView>

                <TextView
                    android:id="@+id/tv_pigeon_father_ring_number_show_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="Enter the father ring number"></TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:text="@string/mother_ring_number"></TextView>

                <TextView
                    android:id="@+id/tv_pigeon_mother_ring_number_show_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="Mother ring number"></TextView>


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_pigeon_gender_show_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:text="@string/gender"></TextView>
<!--

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView1"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_male_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male" />


                    <RadioButton
                        android:id="@+id/rb_female_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radioGroup1"
                        android:layout_alignLeft="@+id/radioGroup1"
                        android:text="Female" />


                </RadioGroup>
-->


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/tv_pigeon_types_name_show_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/category"></TextView>

                <RadioGroup
                    android:visibility="gone"
                    android:id="@+id/radioGroupType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView1"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal"
                    >

                    <RadioButton
                        android:id="@+id/rb_favorite_ty_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Favorite"
                        android:buttonTint="@color/colorTheme"/>


                    <RadioButton
                        android:id="@+id/rb_normal_ty_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/radioGroup1"
                        android:layout_below="@+id/radioGroup1"
                        android:text="Normal"
                        android:buttonTint="#070707"/>


                </RadioGroup>


                <!--          <RadioGroup
                              android:id="@+id/radioGroup2"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_below="@+id/textView1"
                              android:layout_centerHorizontal="true"
                              android:orientation="horizontal">

                              <RadioButton
                                  android:id="@+id/rb_favorite_id"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="Favorite" />


                              <RadioButton
                                  android:id="@+id/rb_normal_id"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_below="@+id/radioGroup1"
                                  android:layout_alignLeft="@+id/radioGroup1"
                                  android:text="Normal" />


                          </RadioGroup>

          -->


            </LinearLayout>

            <TextView
                android:id="@+id/tv_pigeon_details_show_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"></TextView>

            <EditText
                android:visibility="gone"
                android:id="@+id/et_edit_pigeon_details_id"
                android:backgroundTint="@color/colorWhite"
                android:layout_width="wrap_content"
                android:hint="@string/details"
                android:textSize="@dimen/_11sdp"
                android:layout_height="wrap_content">

            </EditText>



<LinearLayout
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_height="wrap_content">


    <Button
        android:layout_weight="1"
        android:layout_marginRight="@dimen/_5sdp"
        android:id="@+id/btn_cancel_pigeon_show_dialog_id"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_btn_theme_bg"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:text="@string/close"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"></Button>


    <Button
        android:visibility="gone"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/_5sdp"
        android:id="@+id/btn_update_pigeon_show_dialog_id"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_btn_theme_bg"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:text="Update"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"></Button>



</LinearLayout>


        </LinearLayout>

</layout>